--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "redux": "^4.2.0",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.1",
+    "seamless-immutable": "^7.1.4",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
